<resources>
    <string name="app_name">OpenCampus</string>

    <!-- Main Views Strings -->
    <string name="btn_dashboard">Dashboard</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <!-- LoginActivity -->
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_need_account">Need An Account?</string>
    <string name="edit_txt_email">Email</string>
    <string name="edit_txt_password">Password</string>
    <string name="txt_view_signin_error">Incorrect email or password, please try again.</string>
    <!-- CreateAccountActivity -->
    <string name="title_create_account">Create New Account</string>
    <string name="edit_txt_firstname">First Name</string>
    <string name="edit_txt_lastname">Last Name</string>
    <string name="edit_txt_username">User Name</string>
    <string name="btn_create_account">Create Account</string>
    <string name="txt_view_invalid_email_error">Not a valid email.</string>
    <string name="txt_view_duplicate_email_error">An account with this email already exists.</string>
    <string name="txt_view_password_error">Password must be at least 8 characters long.</string>
    <string name="txt_view_duplicate_username_error">An account with this username already exists.</string>
    <string name="txt_view_empty_error">Please fill in empty fields.</string>
    <!-- DashboardActivity -->
    <string name="title_dashboard">Content Dashboard</string>
    <string name="btn_open_map">Open Map</string>
    <string name="btn_building_list">Show Building List</string>
    <string name="btn_socket_test">Web Socket Test</string>
    <string name="btn_logout">Logout</string>
    <plurals name="btn_messages">
        <item quantity="zero">0 Messages</item>
        <item quantity="one">1 Message</item>
        <item quantity="other">%d Messages</item>
    </plurals>
    <string name="btn_delete_message">Delete All Messages</string>

    <!-- Map Views Strings -->
    <!-- MapActivity -->
    <string name="btn_place_marker">Place Marker</string>
    <string name="btn_filters">Filters</string>
    <!-- FilterDialog -->
    <string name="title_filter">Apply Filters for Map Markers:</string>
    <string name="check_buildings">Buildings</string>
    <string name="check_features">Features</string>
    <string name="check_uspots">USpots</string>
    <string name="check_custom_markers">Custom Markers</string>

    <!-- Data Views Strings -->
    <!-- BuildingListActivity -->
    <string name="tip_building_name">Building Name</string>
    <string name="tip_abbreviation">Abbreviation</string>
    <string name="tip_address">Address</string>
    <string name="tip_latitue">Latitude</string>
    <string name="tip_longitude">Longitude</string>
    <string name="show_uspot_list">Show USpot List</string>

    <!-- WebSocket Test Strings OBSOLETE-->
    <string name="title_socket">Web Socket Chat</string>
    <string name="txt_view_enter_msg">Enter Message Here</string>
    <string name="btn_send_msg">Send</string>
</resources>
