<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainViews.login.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_DashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_create_account"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText_FirstName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/edit_txt_firstname"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_LastName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/edit_txt_lastname"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_UserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/edit_txt_username"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/textView_userName_error"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:text="@string/txt_view_duplicate_username_error"
            android:textAlignment="center"
            android:textColor="@color/colorWarningText"
            android:textSize="12sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_txt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView_email_error"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:textColor="@color/colorWarningText"
            android:textSize="12sp"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_txt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView_password_error"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:text="@string/txt_view_password_error"
            android:textAlignment="center"
            android:textColor="@color/colorWarningText"
            android:textSize="12sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_empty_error"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/txt_view_empty_error"
            android:textAlignment="center"
            android:textColor="@color/colorWarningText"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createAccount"
            android:text="@string/btn_create_account" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>