<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainViews.login.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_DashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/edit_txt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_Password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/edit_txt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="attemptSignIn"
            android:text="@string/btn_sign_in" />

        <TextView
            android:id="@+id/textView_signin_error"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_view_signin_error"
            android:textAlignment="center"
            android:textColor="@color/colorWarningText"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_need_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:onClick="viewCreateAccountActivity"
            android:text="@string/btn_need_account" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>